- Refactor MovieServiceImpl.